Added reciveEventResult api for the AI module to consume to send the resultafter the complition of the process as a webhook
